--- a/speaking/speaking.html
+++ b/speaking/speaking.html
@@ -2094,12 +2094,12 @@
         </div>
         <div class="sidebar-content">
             <!-- 🔧 CUSTOMIZE: Add your navigation links here -->
-             <a href="/index.html" class="nav-item active">Library</a>
+             <a href="/index.html" class="nav-item">Library</a>
             <a href="/vocab/vocab.html" class="nav-item">Vocab</a>
             <a href="/grammar/grammar.html" class="nav-item">Grammar</a>
               <a href="/novel/novel.html" class="nav-item">Novel</a>
             <a href="/listening/listening.html" class="nav-item">Listening</a>
-            <a href="/debate/debate.html" class="nav-item">Speaking</a>
+            <a href="/debate/debate.html" class="nav-item active">Speaking</a>
             <a href="/reading/reading.html" class="nav-item">Reading</a>
             <a href="/essay/essay.html" class="nav-item">Essay</a>
             <a href="/ted/ted-hub.html" class="nav-item">TED</a>
